--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -361,19 +361,113 @@ body {
   z-index: 0;
 }
 
-.batch-btn-group {
+.btn-2024,
+.btn-2025 {
+  width: 20px;
+  height: 40px;
+  border-radius: 20%;
+  background-color: #00C7FE;
+}
+
+.btn-2024.active,
+.btn-2025.active {
+  width: 38px;
+  height: 40px;
+  background-color: #00C7FE;
+}
+.team-card-1{
+  padding-top: 190px;
+  position: absolute;
+  padding-right: 30px;
+
+  top: 0;
+  right: 0;
+}
+.team-card-2{
+  padding-top: 190px;
+  padding-left: 30px;
+  position: absolute;
+  top: 400px;
+  left: 0;
+}
+.team-card-3{
+  padding-top: 190px;
+  padding-left: 30px;
+  position: absolute;
+  top: 800px;
+  right: 0;
+}
+.team-card-4{
+  padding-top: 190px;
+  padding-left: 30px;
+  position: absolute;
+  top: 1200px;
+  left: 0;
+}
+
+.head-team{
+  width: 1436px;
+  height: 430px;  
+  top: -87px;
+  left: 19px;
+  display: flex;
+  padding-top: 0;
+  margin-top:0 ;
+  justify-content: center;
+}
+.team-head{
+  color: #00C7FE;
+  font-family: Londrina Solid;
+  font-weight: 400;
+  font-size: 128px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  padding-top: 0;
+  margin-top:0 ;
+}
+.container-team {
+  width: 437px;
+  height: 400px;
+  background: white;
+  color: #000000;
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 1;
+  padding-top: 40px;
+  box-sizing: border-box;
+  border-radius:5% ;
 }
 
-.btn-2024,
-.btn-2025 {
-  height: 30px;
-  width: 100px;
-  background: #00C7FE;
-  border-radius: 15px;
-  z-index: 1;
-  position: relative;
+.container-details{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.container-photo {
+  width: 354px;
+  height: 300px;
+  margin: 2px auto 0px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  background: #D9D9D9;
+  color: white;
+}
+
+.basic-detail-team{
+  width: 248px;
+  height: 67px;
+  top: 617px;
+  left: 962px;
+  padding-top:20px ;
+  font-family: Alegreya Sans;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+.links-team{
+  gap: 10px;
+  padding-top: 50px;
 }
