--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -471,3 +471,82 @@ body {
   gap: 10px;
   padding-top: 50px;
 }
+
+.head-contact{
+  position: absolute;
+  top: 55px; 
+  left: 50%; 
+  transform: translateX(-50%);
+  height: 150px;
+  font-family: Londrina Solid;
+  font-weight: 400;
+  font-size: 128px;
+  line-height: 100%;
+  letter-spacing: 0%;
+  color: #00C7FE;
+
+}
+.contact-main {
+  position: absolute; 
+  top: 50px; 
+  left: 50%; 
+  transform: translateX(-50%);
+  width: 1000px; 
+  height: 600px;
+  margin-left: 0;
+  padding-top: 400px;
+  padding-bottom: 60px;
+  background-image: url('/src/assets/cloud.png');
+  background-size: 120% auto; /* Increase cloud size horizontally */
+  background-position: center;
+  background-repeat: no-repeat;
+  border: none;
+  
+}
+.contact-details{
+  display: flex;
+  margin-left:140px ;
+  margin-top: 20px;
+}
+.contact-2{
+  color: #000;
+  margin-top: 50px;
+  font-size: 48px;
+}
+.contact-2 p{
+  padding: 0;
+  margin: 0;
+}
+.contact-1,
+.contact-3{
+  left: 500px;
+}
+.contact-1 img{
+  width: 193px;
+  height:137px;
+  border-radius:5px;
+}
+.contact-3 img{
+  display: flex;
+  align-items: column;
+  width: 34px;
+  height: 27px;
+  left: 500px;
+}
+.contact-3{
+  margin-left: 90px;
+  margin-top: 90px;
+
+}
+contact-bottom{
+  left: 50%;
+  bottom: 0;
+  padding-top: 0;
+
+}
+.contact-bottom p{
+  color: black;
+  margin-left: 300px;
+  margin-top: 100px;
+
+}
